Git ignore file updated

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,43 @@
+node_modules/
+assets/css/*
+!assets/css/.gitkeep
+assets/js/*
+languages/*
+!languages/.gitkeep
+test/
+build/
+.idea/
+.history
+.docz/
 .DS_Store
+.phpcs.cache
+.phpunit.result.cache
+php-errors.log
+ehthumbs.db
+Thumbs.db
+.npm
+.sass-cache
+assets/**/*.map
+.prettierignore
+*.zip
+*.po
+*.po~
+*.mo
+.history
+*.log
+*.map
+assets/js/tutor-front.js
+assets/css/tutor-front.min.css
+v2-library/bundle/main.min.css
+v2-library/bundle/main.min.css.map
+/v2-library/bundle/fonts/tutor-v2-icon-ttr
+v2-library/bundle/main.min.js
+v2-library/bundle/main.min.js.map
+v2-library/bundle/main.rtl.min.css
+v2-library/bundle/main.rtl.min.css.map
+vendor/
+!v2-library/src/scss/structure/vendor
+.phpunit.result.cache
+yarn.lock
+.env
+launch.json
